  anymore and GetOrCreateAccessible() may return NULL, indicating that native
  system-provided accessibility should be used.

- wxMSW port doesn't always let the system process WM_SYSKEYDOWN events any
  more, make sure to call event.Skip() in your wxEVT_KEY_DOWN and/or wxEVT_CHAR
  event handlers if you want the standard key combinations such as Alt-Space or
  Alt-F4 to work.


Changes in behaviour which may result in build errors
-----------------------------------------------------

- "webview" library is not included in `wx-config --libs` output any more, you
  need to request it explicitly, e.g. `wx-config --libs std,webview`.

- wxMSW now requires linking with uxtheme.lib, shlwapi.lib and version.lib.
  This is done automatically in most cases, but if you use a static build of
  the library with a non-MSVC compiler such as MinGW and do not use wx-config,
  then you will need to add these libraries to your make or project files
  yourself.

- WXWIN_OS_DESCRIPTION doesn't exist any longer, use wxGetOsDescription().

- Never documented and not always available private wxGetClipboardData()
  function now doesn't exist at all any more in wxMSW, use wxClipboard instead.

- wxGraphicsRenderer::CreatePen() now takes wxGraphicsPenInfo and not a wxPen.
  This only affects code defining its own custom renderers, code just using
  wxGraphicsContext::CreatePen() continues to compile and work as before.

- wx/treebook.h doesn't include wx/treectrl.h (and, via it, wx/textctrl.h) any
  more, include these headers explicitly from your code if necessary.

- wxHtmlDCRenderer::Render() arguments have changed, simply omit the ones not
  existing in the function signature any more to update the code using it.

- wxHtmlCell::AdjustPagebreak() has lost its "known_pagebreaks" argument,
  update your code if you override this method (you shouldn't be calling it).

- wxListCtrl::SetItem() overload taking the column index now returns bool and